1. User authentication completed 2. Server token validation completed 3. Corrections applied on server in regards to point 2 4. Tranlastion mechanism for Greek added 5. Client controllers fixed to work with promises

--- a/client/templates/components/authentication/forgot.tmpl.html
+++ b/client/templates/components/authentication/forgot.tmpl.html
@@ -1,3 +1,14 @@
+<!--
+<div class="full-image-background mb-bg-fb-05" layout="row" layout-fill>
+    <div class="animate-wrapper" flex layout="row">
+        <div id="ui-login" class="login-frame" ui-view flex layout="row"></div>
+    </div>
+</div>
+-->
+
+
+
+
 <div layout="row" flex layout-padding layout-fill layout-align="center center">
     <div flex="40" flex-lg="50" flex-md="70" flex-sm="100">
         <md-card>
