--- a/client/templates/components/authentication/profile.tmpl.html
+++ b/client/templates/components/authentication/profile.tmpl.html
@@ -1,9 +1,10 @@
+
 <div class="full-image-background mb-bg-01 padding-20 padding-top-200 overlay-gradient-30" layout="row" layout-align="start center">
     <div class="margin-right-20">
         <img src="assets/images/avatars/avatar-5.png" alt="girl-avatar" class="make-round" width="100"/>
     </div>
     <div class="text-light">
-        <h3 class="font-weight-600 margin-bottom-0 text-light">Christos / Profile</h3>
+        <h3 class="font-weight-600 margin-bottom-0 text-light">{{vm.user.name}} / Profile</h3>
         <p class="font-weight-300 margin-top-0">Edit your name, avatar etc</p>
      </div>
 </div>
@@ -14,14 +15,14 @@
             <md-tab label="Profile">
                 <md-content class="md-padding">
                     <form name="profile">
-                        <md-input-container>
+                        <md-input-container class="md-block">
                             <label for="name" translate>PROFILE.NAME.LABEL</label>
                             <input id="name" label="name" name="name" type="text" ng-model="vm.user.name" required/>
                             <div ng-messages="profile.name.$error">
                                 <div ng-message when="required"><span translate>PROFILE.NAME.PLEASE_ENTER</span></div>
                             </div>
                         </md-input-container>
-                        <md-input-container>
+                        <md-input-container class="md-block">
                             <label for="email" translate>PROFILE.EMAIL.LABEL</label>
                             <input id="email" label="email" name="email" type="email" ng-model="vm.user.email" required/>
                             <div ng-messages="profile.email.$error">
@@ -34,11 +35,12 @@
                             </div>
                         </md-input-container>
 
-                        <md-input-container>
+                        <md-input-container class="md-block">
                             <label for="location" translate>PROFILE.LOCATION.LABEL</label>
                             <input id="location" label="location" name="location" type="text" ng-model="vm.user.location"/>
                         </md-input-container>
 
+                        <!--
                         <md-input-container>
                             <label for="website" translate>PROFILE.WEBSITE.LABEL</label>
                             <input id="website" label="website" name="website" type="text" ng-model="vm.user.website"/>
@@ -48,8 +50,8 @@
                             <label for="twitter" translate>PROFILE.TWITTER.LABEL</label>
                             <input id="twitter" label="twitter" name="twitter" type="text" ng-model="vm.user.twitter"/>
                         </md-input-container>
-
-                        <md-input-container>
+                        -->
+                        <md-input-container class="md-block">
                             <label for="bio" translate>PROFILE.BIO.LABEL</label>
                             <textarea id="bio" label="bio" name="bio" ng-model="vm.user.bio"/>
                         </md-input-container>
