--- a/client/templates/components/toolbars/toolbar.tmpl.html
+++ b/client/templates/components/toolbars/toolbar.tmpl.html
@@ -70,7 +70,7 @@
                    ng-click="$mdOpenMenu()">
             <img class="toolbar-user-avatar"
                  src="assets/images/avatars/avatar-5.png">
-             {{userProfile.name}}
+             {{vm.userProfile.name}}
         </md-button>
 
         <md-menu-content width="4">
@@ -87,7 +87,7 @@
             </md-menu-item>
 
             <md-menu-item>
-                <md-button href="#/profile"
+                <md-button ui-sref='dashboard.admin.profile'
                            aria-label="side navigation">
 
                     <md-icon md-font-icon="zmdi zmdi-account">
@@ -103,7 +103,7 @@
 
             <md-menu-item>
                 <!-- authentication.logout does nothing - just calls the LogoutController ui-sref='authentication.logout' -->
-                <md-button ui-sref='authentication.logout'
+                <md-button ui-sref='authentication-logout'
                            aria-label="side navigation">
 
                     <md-icon md-font-icon="zmdi zmdi-sign-in">
